// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorToast renders correctly 1`] = `
<div
  id="sgErrorToast"
>
  nasty!
</div>
`;

exports[`ErrorToast renders correctly if custom message and details 1`] = `
<div
  id="sgErrorToast"
>
  <div
    className="euiText euiText--small"
  >
    <p>
      Super nasty!!!
    </p>
  </div>
  <div
    className="euiSpacer euiSpacer--l"
  />
  <div
    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButton euiButton--danger euiButton--small"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButton__content"
        >
          <span
            className="euiButton__text"
          >
            Details
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorToast renders correctly if details cannot be parsed 1`] = `
<div
  id="sgErrorToast"
>
  nasty!
</div>
`;

exports[`ErrorToast renders details correctly 1`] = `
<div
  id="sgErrorToast"
>
  <div
    className="euiText euiText--small"
  >
    <p>
      nasty!
    </p>
  </div>
  <div
    className="euiSpacer euiSpacer--l"
  />
  <div
    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButton euiButton--danger euiButton--small"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButton__content"
        >
          <span
            className="euiButton__text"
          >
            Details
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
